--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
 	"cSpell.words": [
 		"crxjs",
-		"pico"
+		"itemprop",
+		"pico",
+		"picocss",
+		"shortdescription",
+		"sidepanel"
 	],
 	"eslint.probe": [
 		"javascript",
