--- a/package.json
+++ b/package.json
@@ -1,37 +1,39 @@
 {
-    "name": "web-picker",
-    "description": "Chrome Extension to pick data from web pages.",
-    "version": "1.1.0",
-    "type": "module",
-    "repository": {
-        "type": "git"
-    },
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "deploy": "rm extension.zip && cd dist && zip -r ../extension.zip .",
-        "check": "svelte-check --tsconfig ./tsconfig.json"
-    },
-    "devDependencies": {
-        "@crxjs/vite-plugin": "2.0.0-beta.28",
-        "@sveltejs/vite-plugin-svelte": "3.0.2",
-        "@tsconfig/svelte": "5.0.4",
-        "@types/chrome": "0.0.263",
-        "@types/eslint": "^8.56.7",
-        "@typescript-eslint/eslint-plugin": "^7.5.0",
-        "@typescript-eslint/parser": "^7.5.0",
-        "@typescript-eslint/typescript-estree": "^7.5.0",
-        "eslint": "^8.57.0",
-        "eslint-plugin-import": "^2.29.1",
-        "eslint-plugin-svelte": "^2.35.1",
-        "svelte": "4.2.12",
-        "svelte-check": "3.6.9",
-        "svelte-preprocess": "5.1.3",
-        "tslib": "2.6.2",
-        "typescript": "5.4.3",
-        "vite": "5.2.7"
-    },
-    "dependencies": {
-        "@picocss/pico": "^2.0.6"
-    }
+  "name": "web-picker",
+  "description": "Chrome Extension to pick data from web pages.",
+  "version": "1.1.0",
+  "type": "module",
+  "repository": {
+    "type": "git"
+  },
+  "scripts": {
+    "dev": "vite -c vite.config.sidepanel.ts",
+    "build": "npm run build-content && vite build",
+    "build-content": "vite build --config vite.config.content.ts",
+    "watch-extension": "vite build --watch",
+    "watch-content": "vite build --config vite.config.content.ts --watch",
+    "deploy": "rm extension.zip && cd dist && zip -r ../extension.zip .",
+    "check": "svelte-check --tsconfig ./tsconfig.json"
+  },
+  "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "5.0.2",
+    "@tsconfig/svelte": "5.0.4",
+    "@types/chrome": "0.0.287",
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^22.10.2",
+    "@typescript-eslint/eslint-plugin": "^8.18.0",
+    "@typescript-eslint/parser": "^8.18.0",
+    "@typescript-eslint/typescript-estree": "^8.18.0",
+    "eslint": "^9.17.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-svelte": "^2.46.1",
+    "svelte": "5.14.0",
+    "svelte-check": "4.1.1",
+    "tslib": "2.8.1",
+    "typescript": "5.7.2",
+    "vite": "^6.0.3"
+  },
+  "dependencies": {
+    "@picocss/pico": "^2.0.6"
+  }
 }
