--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,10 +1,13 @@
 // vite tsconfig
 {
-    "compilerOptions": {
-        "composite": true,
-        "skipLibCheck": true,
-        "module": "ESNext",
-        "moduleResolution": "bundler"
-    },
-    "include": ["vite.config.ts", "src/manifest.config.ts", "package.json"]
+  "compilerOptions": {
+    "composite": true,
+    "skipLibCheck": true,
+    "module": "ESNext",
+    "moduleResolution": "bundler",
+  },
+  "include": [
+    "vite.config.ts",
+    "package.json"
+  ]
 }
