--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build-content": "vite build --config vite.config.content.ts",
     "watch-extension": "vite build --watch",
     "watch-content": "vite build --config vite.config.content.ts --watch",
-    "deploy": "rm extension.zip && cd dist && zip -r ../extension.zip .",
+    "deploy": "run-script-os",
+    "deploy:windows": "del extension.zip && cd dist && tar -acf ../extension.zip *",
+    "deploy:default": "rm extension.zip && cd dist && zip -r ../extension.zip .",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
@@ -27,6 +29,7 @@
     "eslint": "^9.17.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-svelte": "^2.46.1",
+    "run-script-os": "^1.1.6",
     "svelte": "5.14.0",
     "svelte-check": "4.1.1",
     "tslib": "2.8.1",
